Final version, center alignment and styling fixed

--- a/static/style.css
+++ b/static/style.css
@@ -29,4 +29,35 @@ img {
 
 .dot{
     font-size: 10px;
+}body {
+    background-color: pink;
+    font-family: Arial;
+}
+
+.banner {
+    display: block;
+    -moz-box-sizing: border-box;
+    width: 200px; 
+    height: 250px;
+}
+
+div {
+    font-size: 20px;
+    text-align: center;
+    line-height: 1.5;
+}
+
+img {
+  margin: auto;
+  display: block;
+}
+
+img {
+  width: 60%;
+  margin: auto;
+  display: block;
+}
+
+.dot{
+    font-size: 10px;
 }
